--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
             <div class="container">
                 <h2>Featured Skills</h2>
                 <div class="skills-container">
-                    <div class="skill">
+                    <div class="skill" style="background-color: rgb(223, 223, 223);">
                         <h3>Web Development</h3>
                         <p>HTML, CSS, JavaScript, and responsive design principles</p>
                     </div>
-                    <div class="skill">
+                    <div class="skill" style="background-color: rgb(223, 223, 223);">
                         <h3>UI/UX Design</h3>
                         <p>User-centered design with a focus on accessibility and usability</p>
                     </div>
-                    <div class="skill">
+                    <div class="skill" style="background-color: rgb(223, 223, 223);">
                         <h3>SEO Optimization</h3>
                         <p>Making websites search engine friendly and optimized for discovery</p>
                     </div>
@@ -78,17 +78,17 @@
             <div class="container">
                 <h2>Recent Work</h2>
                 <div class="work-grid">
-                    <article class="work-item">
+                    <article class="work-item" style="background-color: rgb(223, 223, 223);">
                         <h3>E-commerce Website</h3>
                         <p>A fully responsive online store with shopping cart functionality</p>
                         <a href="projects.html" class="btn btn-small">View Project</a>
                     </article>
-                    <article class="work-item">
+                    <article class="work-item" style="background-color: rgb(223, 223, 223);">
                         <h3>Portfolio Redesign</h3>
                         <p>Modern portfolio website with semantic HTML and CSS Grid</p>
                         <a href="projects.html" class="btn btn-small">View Project</a>
                     </article>
-                    <article class="work-item">
+                    <article class="work-item" style="background-color: rgb(223, 223, 223);">
                         <h3>Blog Platform</h3>
                         <p>Custom blog design with category filtering and responsive layout</p>
                         <a href="projects.html" class="btn btn-small">View Project</a>
